Bug 127184 - CAPTION: Number range changes from "Figure" to "Schaubild" after save and reload in German UI (steps in comment 15)
Summary: CAPTION: Number range changes from "Figure" to "Schaubild" after save and rel...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.3.2 release
Hardware: All Windows (All)
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:26.8.0
Keywords: possibleRegression
: 127404 162949 (view as bug list)
Depends on:
Blocks: Caption
  Show dependency treegraph
 
Reported: 2019-08-27 12:52 UTC by Pit Zaclade
Modified: 2026-02-08 16:18 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot as requested in comment 2 (138.51 KB, image/jpeg)
2019-08-28 17:03 UTC, Dieter
Details
This file demonstrates the bug (5.07 MB, application/vnd.oasis.opendocument.text)
2019-08-28 21:29 UTC, Pit Zaclade
Details
another test file (207.29 KB, application/vnd.oasis.opendocument.text)
2019-09-19 13:17 UTC, Pit Zaclade
Details
test file oncemore (7.77 MB, application/vnd.oasis.opendocument.text)
2021-08-29 09:48 UTC, Pit Zaclade
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pit Zaclade 2019-08-27 12:52:41 UTC
Description:
I am using the German version of writer.
If I put the word “Figure” in (German) writer Tools→ Options→ LibreOffice Writer→ AutoCapture→ LibreOffice Writer Image
and insert one or more images, save the file, close the file and reopen this file then the number range is corrupt:
strg+F9 shows not the “Number range Figure” than an other Number range and a further new inserted picture starts repeated with “Figure 1”.
But if I am using “Gigure”, “figure” or an other word for Image caption, than there is no bug.
This bug is only in the German version of writer.


Steps to Reproduce:
1.put the word “Figure” in (German) writer Tools→ Options→ LibreOffice Writer→ AutoCapture→ LibreOffice Writer Image
2.insert one or more images, save the file
3.close the file and reopen this file then the number range is corrupt

Actual Results:
strg+F9 shows not the “Number range Figure” than an other Number range and a further new inserted picture starts repeated with “Figure 1”.

Expected Results:
"Number range Figure" is saved and a new image become a number=last number +1 (In the German version of writer!)


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Dieter 2019-08-27 13:53:35 UTC
I confirm it with

Version: 6.4.0.0.alpha0+ (x64)
Build-ID: 3e64065612acec2eb29aa21e2b515953422256d7
CPU-Threads: 4; BS: Windows 10.0; UI-Render: GL; VCL: win; 
TinderBox: Win-x86_64@62-TDF, Branch:master, Time: 2019-08-15_22:57:26
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc: threaded

but not with

Version: 5.4.7.2 (x64)
Build-ID: c838ef25c16710f8838b1faec480ebba495259d0
CPU-Threads: 4; BS: Windows 6.19; UI-Render: GL; 
Gebietsschema: de-DE (de_DE); Calc: group
Comment 2 Julien Nabet 2019-08-28 15:14:30 UTC
On Win10 with master sources updated today + German localisation, I don't succeed in reproducing this.

Could someone attach a screenshot of "Automatsiche Beschriftung" for "Libreoffice Writer Bild"?

Indeed, I added "Figure" in first "Trenner" so it's ": Figure".
Comment 3 Dieter 2019-08-28 17:03:33 UTC
Created attachment 153715 [details]
Screenshot as requested in comment 2
Comment 4 Pit Zaclade 2019-08-28 21:12:12 UTC
The problem is not, that you can not produce "Figure" for AutoCapture (in German Version of writer), but if you save, close and reopen the file, then the AutoCapture is corrupt. Any further image starts with Figure 1 and the old AutoCapture to seen with strg+F9 are not "Figure ...".
Therefore the screenshot of Dieter cannot demonstrate the bug.
Comment 5 Pit Zaclade 2019-08-28 21:29:07 UTC
Created attachment 153721 [details]
This file demonstrates the bug
Comment 6 Oliver Brinzing 2019-09-06 18:35:06 UTC
*** Bug 127404 has been marked as a duplicate of this bug. ***
Comment 7 Xisco Faulí 2019-09-18 11:18:27 UTC
@Heiko, do you think it's related to the caption renaming done in 6.2 ?
Comment 8 Heiko Tietze 2019-09-19 06:52:59 UTC
Running LibO Stable 6.2.7, the default name for the category is "Abbildung" (which is what we changed from Illustration to Figure) and this works. If you open a document that was created before it uses Illustration (with the respective translation). Point is, I wonder why Pit has "Figure" in this dialog.
Comment 9 Pit Zaclade 2019-09-19 07:33:36 UTC
I have not said that "Figure" ist the default in the German version. That is no true.
And the "Figure" is not started in my own intention, but an friend in mind has this problem.
Comment 10 Heiko Tietze 2019-09-19 08:09:20 UTC
(In reply to Pit Zaclade from comment #9)
> I have not said...

No accusation, I just mentioned what has been done (Illustration was renamed to Figure). What you can do is to double check the entry at Tools > Options and test with a new document.
Comment 11 Pit Zaclade 2019-09-19 13:17:01 UTC
Created attachment 154292 [details]
another test file
Comment 12 Dieter 2021-08-11 15:48:13 UTC
Retested with

Version: 7.2.0.1 (x64) / LibreOffice Community
Build ID: 32efc3b7f3a71cfa6a7fa3f6c208333df48656cc
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: CL

and couldn't reproduce
=> RESOLVED WORKSFOMRE

Steps:
1. in Ferman UI: Extras => Optionen => LibreOffice Writer => Automatische Beschriftung
2. Select "LibreOffice Writer Bild" and in Kategrie add "Figure" => Press OK
3. Insert at least three images => Order of captions is correct
4. Save and reopen => Order of captions is still correct
Comment 13 Pit Zaclade 2021-08-29 09:45:54 UTC
(german) version 7.2.0.4 (x64)

That isn´t true!

I have the wrote “Figure” in (German) writer Tools→ Options→ LibreOffice Writer→ AutoCapture→ LibreOffice Writer Image and I have places two pictures and saved.

Then I have opened this file and now I have want to insert the third picture.
Yes, its a "figure", but not the "figure 3" as I was hoped that. It is a new 1 !
Comment 14 Pit Zaclade 2021-08-29 09:48:41 UTC
Created attachment 174599 [details]
test file oncemore
Comment 15 Dieter 2021-09-12 09:44:10 UTC
Sorry Pit, you're right (I had the wrong steps)

Correct steps to reproduce:
1. in German UI: Extras => Optionen => LibreOffice Writer => Automatische Beschriftung
2. Select "LibreOffice Writer Bild" and in Kategrie add "Figure" => Press OK
3. Insert at two images => Order of captions is correct
4. Strg+F9 => Fieldname is "Nummernkreis Figure"
5. Save and reload
6. Strg+F9

Actual result:
Fieldname is "Nummernkreis Schaubild"

expected result:
Fieldname is "Nummernkreis Figure"
Comment 16 QA Administrators 2023-09-13 03:17:18 UTC Comment hidden (obsolete)
Comment 17 Dieter 2023-09-26 06:54:38 UTC
Still present in

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a4522ef5ce6a625054d83ec907aee07c156e94ed
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (de_DE); UI: en-US
Calc: CL threaded
Comment 18 Dieter 2024-09-28 09:35:55 UTC
Same problem with manual created fields as described in bug 162949. So I've changed bug summary
Comment 19 Dieter 2024-09-28 09:37:09 UTC
*** Bug 162949 has been marked as a duplicate of this bug. ***
Comment 20 Commit Notification 2026-01-30 15:28:10 UTC
Gülşah Köse committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/936ab761667feadc4e7dcb35a051e77bb281f1b1

tdf#127184 Use caption text instead of category in navigator

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 21 Dieter 2026-02-08 16:18:10 UTC
Verified with

Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 680(Build:0)
CPU threads: 12; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: CL threaded

Gülşah, thank you for fixing it!