tdf#127184 Use caption text instead of category in navigator

At first creating a caption, navigator just gets the last name (Figure) from
dialog without translated to UI language (as user type). But while
opening again the same file, Figure is translated to UI language in
sw::DocumentFieldsManager::InitFieldTypes.

The problem is when user inserts a new category name and the category
name is same with built in category names. Built in category names are
always in English. There is no way for navigator to choose translated
one or untranslated one.

<text:sequence-decls>
    <text:sequence-decl text:display-outline-level="0" text:name="Illustration"/>
    <text:sequence-decl text:display-outline-level="0" text:name="Table"/>
    <text:sequence-decl text:display-outline-level="0" text:name="Text"/>
    <text:sequence-decl text:display-outline-level="0" text:name="Drawing"/>
    <text:sequence-decl text:display-outline-level="0" text:name="Figure"/>
    <text:sequence-decl text:display-outline-level="0" text:name="Figure"/>
</text:sequence-decls>

Instead of we can use the caption directly just like inital caption insert
function did. In this patch we use first two word of the caption to prevent
long lines in the navigator.

Signed-off-by: Gülşah Köse <gulsah.kose@collabora.com>
Change-Id: I9bffdc3edad1eee91a000997b3ba9c8a3ea5b673
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197792
Tested-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
(cherry picked from commit 0c7ad92ce815350a6b68da7e05e253388cb83616)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198427